--- a/h3.1/src/index.css
+++ b/h3.1/src/index.css
@@ -3,6 +3,7 @@
     height: 200px;
     margin-top: 100px;
     margin-left: 100px;
+    margin-bottom: 200px;
     background-color: red;
     transition: 1s;
 }
@@ -11,6 +12,7 @@
     width: 200px;
     height: 200px;
     margin-top: 100px;
+    margin-bottom: 200px;
     background-color: red;
     margin-left: 300px;
     transition: 1s;
