--- a/h4/src/index.css
+++ b/h4/src/index.css
@@ -32,3 +32,21 @@
     margin: 10px 0;
     margin-left: 50px;
 }
+
+.contacts-wrapper{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    justify-content: space-around;
+    margin-top: 50px;
+    gap: 30px;
+}
+
+.contacts-wrapper>div{
+    margin: 0 auto;
+    font-size: 18px;
+}
+
+.contacts-wrapper>div>img{
+    width: 150px;
+}
+
