--- a/h5/src/index.css
+++ b/h5/src/index.css
@@ -1,3 +1,9 @@
 body{
   background-color: #F2F2F2; 
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
