--- a/h6/src/index.css
+++ b/h6/src/index.css
@@ -20,9 +20,10 @@ body, html{
 .container{
     padding: 100px;
 }
-.form>input{
+.form>input, .redux-form>input{
     display: block;
-    padding: 10px 50px 10px 10px;
+    width: 200px;
+    padding: 15px 50px 15px 10px;
     margin-top: 30px;
     border:2px solid black;
     border-radius: 5px;
@@ -32,8 +33,8 @@ body, html{
     color:black;
 }
 
-.form>button{
-    padding: 10px 50px;
+.form>button, .redux-form>button{
+    padding: 15px 50px;
     background-color: transparent;
     border:2px solid black;
     border-radius: 5px;
